# qg-python

./: CHANGELOG.md  README.md  RELEASES.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  osi_semantic_croissant.py  pydantic_ai_v2_memory_agents.py  pyspark_query_sail.py  typedid_langchain_agents.py
querygraph/: __init__.py  __main__.py  a2a.py  agents.py  api_auth.py  base58.py  cdif.py  cdrl.py  cli.py  codata.py  croissant.py  crypto.py  dataverse.py  did.py  lakehouse.py  lineage.py  mcp_server.py  navigator.py  navigator_loop.py  odrl.py  odrl_rights.py  osi.py  pydantic_ai_capabilities.py  qglake.py  rbac.py  typedid.py  validation.py
tests/: test_a2a.py  test_agents_interop.py  test_crypto.py  test_mcp_server.py  test_navigator_loop.py  test_osi_model.py  test_pydantic_ai_memory_capabilities.py  test_python_ecosystem.py  test_python_semantics.py  test_rust_equivalence.py
