[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "querygraph"
version = "0.1.0"
description = "Python port of the QueryGraph AI Navigator semantic layer"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
querygraph = "querygraph.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
