[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "querygraph"
version = "0.3.0.dev0"
description = "Python port of the QueryGraph AI Navigator semantic layer"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "QueryGraph", email = "alexy.aisub@lakesail.com" },
]
keywords = [
  "semantic-layer",
  "agentic-ai",
  "croissant",
  "cdif",
  "did",
  "odrl",
  "openlineage",
  "osi",
  "lakehouse",
  "mcp",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Database",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7",
]

[project.urls]
Homepage = "https://querygraph.ai"
Repository = "https://github.com/querygraph/qg-python"
Changelog = "https://github.com/querygraph/qg-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
agents = [
  "langchain-core>=0.3,<2",
]
crypto = [
  "cryptography>=42",
]
mcp = [
  "mcp>=1.2",
  "pyyaml>=6",
]
lakehouse = [
  "googleapis-common-protos>=1.75.0",
  "grpcio>=1.81.0",
  "grpcio-status>=1.81.0",
  "pandas>=3.0.0",
  "pyarrow>=24.0.0",
  "pyspark>=4.1.2",
  "zstandard>=0.25.0",
]
test = ["pytest>=8.0", "cryptography>=42"]
all = [
  "cryptography>=42",
  "googleapis-common-protos>=1.75.0",
  "grpcio>=1.81.0",
  "grpcio-status>=1.81.0",
  "langchain-core>=0.3,<2",
  "mcp>=1.2",
  "pandas>=3.0.0",
  "pyarrow>=24.0.0",
  "pyspark>=4.1.2",
  "pyyaml>=6",
  "zstandard>=0.25.0",
]

[project.scripts]
querygraph = "querygraph.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
